clusters/vollminlab-cluster/kyverno/kyverno/policies/restrict-default.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-default-namespace
  annotations:
    policies.kyverno.io/title: Restrict default Namespace
    policies.kyverno.io/category: Best Practices
    policies.kyverno.io/severity: medium
    policies.kyverno.io/description: "Disallow the creation of resources in the default namespace."
    kyverno.io/enable-background: "true"
  labels:
    app: kyverno
    env: production
    category: security
spec:
  validationFailureAction: enforce
  background: false
  rules:
    - name: block-default-namespace
      match:
        any:
          - resources:
              kinds:
                - "*"
              namespaces:
                - default
      exclude:
        any:
          - resources:
              kinds:
                - StorageClass
                - ClusterRole
                - ClusterRoleBinding
                - ClusterPolicy
                - PolicyException
                - CustomResourceDefinition
                - Namespace
                - Node
                - PersistentVolume
                - NetworkPolicy
                - IngressClass
                - CSIDriver
                - CSINode
                - VolumeAttachment
                - ClusterIssuer
                - Event
                - EphemeralReport
                - PolicyReport
                - ClusterPolicyReport
                - AdmissionReport
                - ClusterAdmissionReport
                - BackgroundScanReport
                - ClusterBackgroundScanReport
                - ClusterSecretStore
      validate:
        message: "Do not deploy resources into the 'default' namespace."
        deny: {}
